css/styles.css
@import url(https://fonts.bunny.net/css?family=playfair-display:400|roboto:400);

:root {
    --header-footer-background-color: rgb(8, 145, 178);
    
    --about-card-image-width: 700px;
    --about-card-image-height: 800px;
    
    --contact-card-image-width: 1000px;
    --contact-card-image-height: 700px;

    --box-shadow: 0 0 15px rgb(0 0 0 / 0.38);
    --box-shadow-light: 0 0 20px rgb(0 0 0 / 0.15);

    --text-shadow: 0 5px 5px rgb(0 0 0 / 0.38);

    --github-icon: url("../images/github.svg");
    --linked-in-icon: url("../images/linked-in.svg");
    --x-social-icon: url("../images/x-social.svg");
    --open-in-new-icon: url("../images/open-in-new.svg");
    --phone-icon: url("../images/phone.svg");
    --email-icon: url("../images/email.svg");

    --accent-font-color: rgb(87, 86, 85);

    --border-padding-small: 20px;

    font-family: 'Roboto', sans-serif;
}

body {
    padding: 0;
    margin: 0;
}

h1, h2, h3 {
    font-family: "Playfair Display", serif;
    font-weight: 400;
}

header {
    position: relative;
    margin-bottom: 100px;
    /* filter: drop-shadow(0 0 15px gray); */ /* TODO: See if there's a way to make this work */
}

header::before {
    clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 0% 100%);
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: -1;
    background: var(--header-footer-background-color);
}

.about-card {
    display: flex;
    align-items: center;

    padding: 100px;
}

.about-card .image {
    flex: 1;
    position: relative;
    box-shadow: var(--box-shadow-light);
    width: var(--about-card-image-width);
    height: var(--about-card-image-height);
}

.about-card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}

.about-card h1 {
    position: absolute;
    bottom: 0;
    color: white;
    text-align: center;
    width: 100%;
    margin: 0 0 5px 0;
    font-size: 6rem;
    text-shadow: var(--text-shadow);
}

.about-card .details {
    flex: 1;

    display: flex;
    flex-direction: column;

    box-sizing: border-box;
    padding: 60px;
    box-shadow: var(--box-shadow);
    background-color: white;
}

.about-card .details h2,
main section h2,
footer h2 {
    font-size: 4rem;
    margin: 0 0 30px 0;
}

.about-card .details .description {
    flex: 1;
    
    font-size: 2rem;
    color: var(--accent-font-color);
    line-height: 1.5;
    margin-bottom: 30px;
}

.about-card .details .button-list {
    display: flex;
    justify-content: right;
    gap: 25px;
}

main,
footer {
    padding: 75px;
}

main {
    padding-bottom: 150px;
}

main section h2 {
    margin-bottom: 15px;
}

.card-list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    gap: 75px;
}

.project-card {
    max-width: 550px;
    min-height: 650px;
    box-shadow: var(--box-shadow);
}

.project-card .image {
    display: flex;
    justify-content: center;
    align-items: center;
    
    height: 400px;
}

.project-card:first-child .image {
    background-color: rgb(158, 28, 28);
}

.project-card:nth-child(2) .image {
    background-color: rgb(124, 117, 202);
}

.project-card:nth-child(3) .image {
    background-color: rgb(94, 143, 77);
}

.project-card:nth-child(4) .image {
    background-color: rgb(195, 99, 180);
}

.project-card:nth-child(5) .image {
    background-color: rgb(216, 143, 57);
}

.project-card:last-child .image {
    background-color: rgb(75, 162, 210);
}

.image .placeholder-text {
    font-size: 4rem;
    color: white;
    text-align: center;
    padding: 20px;
    font-family: "Playfair Display", serif;
}

.project-card .details {
    padding: 25px;
}

.project-card .details .header {
    display: flex;
    
    margin-bottom: 20px;
}

.project-card .details .header h3 {
    flex: 1;
    gap: 15px;

    font-size: 2rem;
    margin: 0;
}

.project-card .details .header .button-list {
    display: flex;
    align-items: center;
    gap: 15px;
}

.project-card .details .description {
    font-size: 1.5rem;
    color: var(--accent-font-color);
}

footer {
    display: flex;
    gap: 50px;
    
    background-color: var(--header-footer-background-color);
    color: white;
}

footer .contact-card {
    flex: 1;
}

footer .button-list {
    display: flex;
    gap: 25px;
}

footer .content-block {
    font-size: 1.75rem;
    margin-bottom: 50px;
}

.icon-with-text {
    display: flex;
    gap: 10px;

    margin-bottom: 20px;
}

footer .icon-with-text .icon {
    background-color: white;
}

footer img {
    flex: 0 1 var(--contact-card-image-width);
    min-width: 150px;
    height: var(--contact-card-image-height);
    object-fit: cover;
}

a {
    cursor: pointer;
}

.icon {
    border: none;
    box-sizing: border-box;
    height: 35px;
    width: 35px;
    mask-repeat: no-repeat;
    mask-position: center;
    background-color: black;
}

.icon.large {
    height: 50px;
    width: 50px;
}

.icon.github {
    mask-image: var(--github-icon);
}

.icon.linked-in {
    mask-image: var(--linked-in-icon);
}

.icon.x-social {
    mask-image: var(--x-social-icon);
}

.icon.open-in-new {
    mask-image: var(--open-in-new-icon);
}

.icon.phone {
    mask-image: var(--phone-icon);
}

.icon.email {
    mask-image: var(--email-icon);
}

@media (max-width: 1200px) and (min-width: 751px) {
    .about-card {
        display: block;
        padding-top: 150px;
    }
    
    .about-card .image {
        position: static;
        float: left;
        width: 400px;
        height: 600px;
        margin-left: -75px;
        margin-top: -125px;
        margin-right: 25px;
    }

    .about-card h1 {
        top: 10px;
        right: 10px;
        text-wrap: nowrap;
        text-align: right;
    }

    .about-card .details {
        display: block;
        padding: 25px;
    }

    .about-card .details h2 {
        text-align: center;
    }

    footer {
        padding: 25px;
    }
}

@media (max-width: 750px) {
    header::before {
        clip-path: polygon(0% 0%, 100% 0%, 100% 18%, 0% 36%);
    }
    
    .about-card {
        display: block;

        padding: var(--border-padding-small);
    }
    
    .about-card h1 {
        text-align: left;
        font-size: 5rem;
        left: 5px;
    }

    .about-card .image {
        width: calc(100vw - 2 * var(--border-padding-small));
        height: 75vh;
        box-shadow: var(--box-shadow);
        margin-bottom: 100px;
    }

    .about-card .details {
        box-shadow: unset;
        padding: 0;
    }

    .about-card .details h2,
    main section h2,
    footer h2 {
        font-size: 3rem;
        text-align: center;
    }

    .about-card .details .button-list,
    footer .button-list {
        justify-content: center;
    }

    main {
        padding-top: var(--border-padding-small);
        padding-left: var(--border-padding-small);
        padding-right: var(--border-padding-small);
    }

    .card-list {
        grid-template-columns: 1fr;
        justify-items: center;
    }

    .project-card .image .placeholder-text {
        font-size: 3rem;
    }

    .project-card .details .header h3 {
        font-size: 1.75rem;
    }

    .icon {
        height: 30px;
        width: 30px;
    }

    footer {
        display: block;
        padding: 0;
    }

    footer .contact-card {
        padding: var(--border-padding-small);
    }

    footer .content-block {
        font-size: 1.15rem;
        margin-bottom: 30px;
    }

    footer .content-block:first-child {
        font-size: 1.5rem;
    }

    footer .icon-with-text .icon{
        display: none;
    }

    footer .icon-with-text {
        margin-bottom: 0px;
    }

    footer img {
        width: 100vw;
        height: 75vh;
    }
}

